--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,10 @@ Build-Depends: debhelper (>= 9),
                dh-python,
                python3-all,
                python3-aiohttp,
-               python3-swh.core,
+               python3-swh.core (>= ~0.0.14),
+               python3-defusedxml,
+               python3-jinja2,
+               python3-click,
                python3-vcversioner
 Standards-Version: 3.9.6
 Homepage: https://forge.softwareheritage.org/diffusion/<PHABRICATOR_CALLSIGN>/
