--- a/debian/control
+++ b/debian/control
@@ -4,10 +4,10 @@ Section: python
 Priority: optional
 Build-Depends: debhelper (>= 9),
                dh-python,
+               python3-setuptools,
                python3-all,
                python3-aiohttp,
-               python3-swh.core (>= ~0.0.14),
-               python3-defusedxml,
+               python3-swh.core (>= 0.0.14~),
                python3-jinja2,
                python3-click,
                python3-vcversioner
