Makefile: Explicit the dev mode to run in debug mode

--- a/Makefile.local
+++ b/Makefile.local
@@ -1,5 +1,5 @@
 run-dev:
-	python3 -m swh.deposit.server ./resources/deposit/server.yml
+	python3 -m swh.deposit.server ./resources/deposit/server.yml --debug
 
 run:
 	python3 -m swh.deposit.server ~/.config/swh/deposit/server.yml
