--- a/debian/control
+++ b/debian/control
@@ -6,9 +6,8 @@ Build-Depends: debhelper (>= 9),
                dh-python,
                python3-setuptools,
                python3-all,
-               python3-aiohttp,
                python3-swh.core (>= 0.0.14~),
-               python3-jinja2,
+               python3-django,
                python3-click,
                python3-vcversioner
 Standards-Version: 3.9.6
