flake8: Exclude generated files from being checked for pep errors
Also:
- reinstall the pre-commit hook
- fix the minor pep violations

--- a/Makefile.local
+++ b/Makefile.local
@@ -1,3 +1,5 @@
+FLAKEFLAGS='--exclude=swh/manage.py,swh/deposit/settings.py,swh/deposit/migrations/'
+
 run-dev:
 	python3 -m swh.manage runserver
 
