--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,8 @@ Build-Depends: debhelper (>= 9),
                python3-swh.core (>= 0.0.14~),
                python3-django,
                python3-click,
-               python3-vcversioner
+               python3-vcversioner,
+               python3-djangorestframework
 Standards-Version: 3.9.6
 Homepage: https://forge.softwareheritage.org/source/swh-deposit/
 
