Add bunch of files to the git ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 __pycache__
 *.egg-info/
 version.txt
+/analysis.org
+/swh/deposit/fixtures/private_data.yaml
+/swh/deposit.json
+/test.json
+/swh/test
