--- a/Makefile.local
+++ b/Makefile.local
@@ -21,7 +21,7 @@ run-dev:
 	$(MANAGE) runserver
 
 run:
-	gunicorn3 swh.deposit.wsgi
+	DJANGO_SECRET_KEY='production' gunicorn3 swh.deposit.wsgi
 
 # .PHONY: test
 # test:
