--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,8 @@ Build-Depends: debhelper (>= 9),
                python3-django,
                python3-click,
                python3-vcversioner,
-               python3-djangorestframework
+               python3-djangorestframework,
+               python3-djangorestframework-xml
 Standards-Version: 3.9.6
 Homepage: https://forge.softwareheritage.org/source/swh-deposit/
 
