--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,5 @@ include Makefile
 include requirements.txt
 include requirements-swh.txt
 include version.txt
+recursive-include swh/deposit/fixtures *
+recursive-include swh/deposit/templates *
