--- a/swh/deposit/fixtures/deposit_data.yaml
+++ b/swh/deposit/fixtures/deposit_data.yaml
@@ -7,3 +7,11 @@
   pk: 1
   fields:
     name: hal
+- model: deposit.depositrequesttype
+  pk: 1
+  fields:
+    name: archive
+- model: deposit.depositrequesttype
+  pk: 2
+  fields:
+    name: metadata
