--- a/swh/deposit/fixtures/deposit_data.yaml
+++ b/swh/deposit/fixtures/deposit_data.yaml
@@ -3,7 +3,7 @@
   fields:
     release: '2017-07-31 08:10:00.303000+00:00'
     description: Work in Progress
-- model: deposit.deposittype
+- model: deposit.depositcollection
   pk: 1
   fields:
     name: hal
