--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,8 @@ Build-Depends: debhelper (>= 9),
                dh-python,
                python3-setuptools,
                python3-all,
+               python3-nose,
+               python3-vcversioner,
                python3-swh.core (>= 0.0.14~),
                python3-django,
                python3-click,
