--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,1 +1,9 @@
 include ../../swh-docs/Makefile.sphinx
+
+html: copy_md
+
+copy_md:
+	cp ../README-getting-started.md getting-started.md
+	cp ../README.md spec-info.md
+	cp ../README-dev.md dev-info.md
+	cp ../README-sys.md sys-info.md
