--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Build-Depends: debhelper (>= 9),
                python3-vcversioner,
                python3-swh.core (>= 0.0.14~),
                python3-swh.loader.tar (>= 0.0.27~),
+               python3-swh.objstorage (>= 0.0.23~),
                python3-django,
                python3-click,
                python3-vcversioner,
@@ -20,5 +21,8 @@ Homepage: https://forge.softwareheritage.org/source/swh-deposit/
 
 Package: python3-swh.deposit
 Architecture: all
-Depends: ${misc:Depends}, ${python3:Depends}
+Depends: python3-swh.core (>= 0.0.14~),
+         python3-swh.loader.tar (>= 0.0.27~),
+         python3-swh.objstorage (>= 0.0.23~),
+         ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Server
