--- a/Makefile.local
+++ b/Makefile.local
@@ -24,7 +24,7 @@ run-dev:
 	$(MANAGE) runserver
 
 run:
-	gunicorn3 swh.deposit.wsgi
+	gunicorn3 -b 127.0.0.1:5006 swh.deposit.wsgi
 
 test:
 	cd swh && python3 -m manage test
