--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Build-Depends: debhelper (>= 9),
                python3-vcversioner,
                python3-swh.core (>= 0.0.14~),
                python3-swh.loader.tar (>= 0.0.26~),
+               python3-swh.scheduler (>= 0.0.17~),
                python3-django,
                python3-click,
                python3-vcversioner,
@@ -22,5 +23,6 @@ Package: python3-swh.deposit
 Architecture: all
 Depends: python3-swh.core (>= 0.0.14~),
          python3-swh.loader.tar (>= 0.0.26~),
+         python3-swh.scheduler (>= 0.0.17~),
          ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Server
