swh.deposit.auth: private api is free from basic authentication
This includes:

- dropping the old swh.deposit.auth module which included a basic
  authentication middleware. We now use djangorestframework's (drf).
  We did not prior to this due to some package version issue.

- As this returns json response in failing authentication though, we
  convert the response into an swh-deposit one (that code remained in
  the swh.deposit.auth module)

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -3,6 +3,7 @@ ARCHIVE=../../swh-deposit.zip
 ARCHIVE2=../../swh-model.zip
 STATUS=false
 PARTIAL_STATUS=true
+UPDATE_STATUS='success'
 
 create-archives:
 	7z a $(ARCHIVE) $(FOLDER)
@@ -31,3 +32,9 @@ status:
 
 service-document:
 	./service-document.sh
+
+home:
+	./home.sh
+
+update-status:
+	./update-status.sh $(DEPOSIT_ID) $(UPDATE_STATUS)
