--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 9),
                python3-nose,
                python3-vcversioner,
                python3-swh.core (>= 0.0.14~),
+               python3-swh.loader.core (>= 0.0.19~),
                python3-swh.loader.tar (>= 0.0.27~),
                python3-swh.scheduler (>= 0.0.17~),
                python3-django,
