--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,8 @@ Build-Depends: debhelper (>= 9),
                python3-click,
                python3-vcversioner,
                python3-djangorestframework,
-               python3-djangorestframework-xml
+               python3-djangorestframework-xml,
+               python3-requests
 Standards-Version: 3.9.6
 Homepage: https://forge.softwareheritage.org/source/swh-deposit/
 
@@ -27,3 +28,13 @@ Depends: python3-swh.core (>= 0.0.14~),
          python3-swh.scheduler (>= 0.0.17~),
          ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Server
+
+Package: python3-swh.deposit.injection
+Architecture: all
+Depends: python3-swh.core (>= 0.0.14~),
+         python3-swh.loader.core (>= 0.0.19~),
+         python3-swh.loader.tar (>= 0.0.26~),
+         python3-swh.scheduler (>= 0.0.17~),
+         python3-requests,
+         ${misc:Depends}, ${python3:Depends}
+Description: Software Heritage Deposit Injection
