--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 9),
                python3-setuptools,
                python3-all,
                python3-nose,
+               python3-django-nose,
                python3-vcversioner,
                python3-swh.core (>= 0.0.14~),
                python3-swh.loader.core (>= 0.0.19~),
