--- a/debian/control
+++ b/debian/control
@@ -30,7 +30,8 @@ Depends: python3-swh.core (>= 0.0.14~),
          ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Server
 
-Package: python3-swh.deposit.injection
+Package: python3-swh.deposit.loader
+Conflict: python3-swh.deposit.injection
 Architecture: all
 Depends: python3-swh.core (>= 0.0.14~),
          python3-swh.loader.core (>= 0.0.25~),
@@ -38,4 +39,4 @@ Depends: python3-swh.core (>= 0.0.14~),
          python3-swh.scheduler (>= 0.0.19~),
          python3-requests,
          ${misc:Depends}, ${python3:Depends}
-Description: Software Heritage Deposit Injection
+Description: Software Heritage Deposit Loader
