--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,8 @@ Build-Depends: debhelper (>= 9),
                python3-vcversioner,
                python3-djangorestframework,
                python3-djangorestframework-xml,
-               python3-requests
+               python3-requests,
+               patool
 Standards-Version: 3.9.6
 Homepage: https://forge.softwareheritage.org/source/swh-deposit/
 
@@ -26,6 +27,7 @@ Package: python3-swh.deposit
 Architecture: all
 Depends: python3-swh.core (>= 0.0.36~),
          python3-swh.scheduler (>= 0.0.19~),
+         patool,
          ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Server
 
