swh.deposit.api: Rename deposit statuses
Closes T934

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -3,7 +3,7 @@ ARCHIVE=../../swh-deposit.zip
 ARCHIVE2=../../swh-model.zip
 STATUS=false
 PARTIAL_STATUS=true
-UPDATE_STATUS='success'
+UPDATE_STATUS='done'
 ATOM_ENTRY=../../atom-entry.xml
 EXTERNAL_ID='external-id'
 
