--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Build-Depends: debhelper (>= 9),
                python3-django-nose,
                python3-vcversioner,
                python3-swh.core (>= 0.0.36~),
+               python3-swh.model (>= 0.0.21~),
                python3-swh.loader.core (>= 0.0.27~),
                python3-swh.loader.tar (>= 0.0.32~),
                python3-swh.scheduler (>= 0.0.19~),
@@ -26,6 +27,7 @@ Homepage: https://forge.softwareheritage.org/source/swh-deposit/
 Package: python3-swh.deposit
 Architecture: all
 Depends: python3-swh.core (>= 0.0.36~),
+         python3-swh.model (>= 0.0.21~),
          python3-swh.scheduler (>= 0.0.19~),
          patool,
          ${misc:Depends}, ${python3:Depends}
@@ -35,6 +37,7 @@ Package: python3-swh.deposit.loader
 Conflict: python3-swh.deposit.injection
 Architecture: all
 Depends: python3-swh.core (>= 0.0.36~),
+         python3-swh.model (>= 0.0.21~),
          python3-swh.loader.core (>= 0.0.27~),
          python3-swh.loader.tar (>= 0.0.32~),
          python3-swh.scheduler (>= 0.0.19~),
