--- a/debian/control
+++ b/debian/control
@@ -20,6 +20,7 @@ Build-Depends: debhelper (>= 9),
                python3-djangorestframework,
                python3-djangorestframework-xml,
                python3-requests,
+               python3-lxml,
                patool
 Standards-Version: 3.9.6
 Homepage: https://forge.softwareheritage.org/source/swh-deposit/
@@ -33,14 +34,23 @@ Depends: python3-swh.core (>= 0.0.36~),
          ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Server
 
+Package: python3-swh.deposit.client
+Architecture: all
+Depends: python3-swh.core (>= 0.0.36~),
+         python3-swh.model (>= 0.0.21~),
+         python3-requests,
+         python3-lxml,
+         ${misc:Depends}, ${python3:Depends}
+Description: Software Heritage Deposit Api Client
+
 Package: python3-swh.deposit.loader
 Conflict: python3-swh.deposit.injection
 Architecture: all
-Depends: python3-swh.core (>= 0.0.36~),
+Depends: python3-swh.deposit.client (= ${binary:Version}),
+         python3-swh.core (>= 0.0.36~),
          python3-swh.model (>= 0.0.21~),
          python3-swh.loader.core (>= 0.0.27~),
          python3-swh.loader.tar (>= 0.0.32~),
          python3-swh.scheduler (>= 0.0.19~),
-         python3-requests,
          ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Loader
