--- a/debian/control
+++ b/debian/control
@@ -18,9 +18,9 @@ Build-Depends: debhelper (>= 9),
                python3-click,
                python3-vcversioner,
                python3-djangorestframework,
-               python3-djangorestframework-xml,
                python3-requests,
                python3-lxml,
+               python3-xmltodict,
                patool
 Standards-Version: 3.9.6
 Homepage: https://forge.softwareheritage.org/source/swh-deposit/
