--- a/debian/control
+++ b/debian/control
@@ -19,7 +19,6 @@ Build-Depends: debhelper (>= 9),
                python3-vcversioner,
                python3-djangorestframework,
                python3-requests,
-               python3-lxml,
                python3-xmltodict,
                patool
 Standards-Version: 3.9.6
@@ -39,7 +38,7 @@ Architecture: all
 Depends: python3-swh.core (>= 0.0.36~),
          python3-swh.model (>= 0.0.25~),
          python3-requests,
-         python3-lxml,
+         python3-xmltodict,
          ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Api Client
 
