tox: activate coverage

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
   pytest-cov
   pifpaf
 commands =
-  pifpaf run postgresql -- pytest {envsitepackagesdir}/swh/deposit  {posargs}
+  pifpaf run postgresql -- pytest {envsitepackagesdir}/swh/deposit --cov=swh --cov-branch {posargs}
 
 [testenv:flake8]
 skip_install = true
