tox: Adapt configuration to make the coverage report work

--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,9 @@ deps =
   .[testing]
   pytest-cov
   pifpaf
+  pytest-django
 commands =
-  pifpaf run postgresql -- pytest {envsitepackagesdir}/swh/deposit --cov=swh --cov-branch {posargs}
+  pifpaf run postgresql -- pytest --cov {envsitepackagesdir}/swh/deposit --cov-branch {posargs} {envsitepackagesdir}/swh/deposit
 
 [testenv:flake8]
 skip_install = true
