--- a/debian/control
+++ b/debian/control
@@ -4,23 +4,23 @@ Section: python
 Priority: optional
 Build-Depends: debhelper (>= 9),
                dh-python (>= 2),
+               patool,
                python3-setuptools,
                python3-all,
-               python3-nose,
-               python3-django-nose,
+               python3-click,
+               python3-django,
+               python3-djangorestframework,
+               python3-pytest,
+               python3-pytest-django,
+               python3-requests,
                python3-vcversioner,
                python3-swh.core (>= 0.0.36~),
                python3-swh.model (>= 0.0.26~),
                python3-swh.loader.core (>= 0.0.32~),
-               python3-swh.loader.tar (>= 0.0.35~),
-               python3-swh.scheduler (>= 0.0.26~),
-               python3-django,
-               python3-click,
+               python3-swh.loader.tar (>= 0.0.37~),
+               python3-swh.scheduler (>= 0.0.39~),
                python3-vcversioner,
-               python3-djangorestframework,
-               python3-requests,
                python3-xmltodict,
-               patool
 Standards-Version: 3.9.6
 Homepage: https://forge.softwareheritage.org/source/swh-deposit/
 
@@ -28,7 +28,7 @@ Package: python3-swh.deposit
 Architecture: all
 Depends: python3-swh.core (>= 0.0.36~),
          python3-swh.model (>= 0.0.26~),
-         python3-swh.scheduler (>= 0.0.26~),
+         python3-swh.scheduler (>= 0.0.39~),
          patool,
          ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Server
@@ -49,7 +49,7 @@ Depends: python3-swh.deposit.client (= ${binary:Version}),
          python3-swh.core (>= 0.0.36~),
          python3-swh.model (>= 0.0.26~),
          python3-swh.loader.core (>= 0.0.32~),
-         python3-swh.loader.tar (>= 0.0.35~),
-         python3-swh.scheduler (>= 0.0.26~),
+         python3-swh.loader.tar (>= 0.0.37~),
+         python3-swh.scheduler (>= 0.0.39~),
          ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Loader
