tox: workaround to pip's inability to properly solve dependency resolution
Without this, some dependencies from swh.core[http] are not installed
(because swh.core, without extras, is installed first from
requirements-swh.txt).

Probably similar to this issue https://github.com/pypa/pip/issues/6506

--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,10 @@ envlist=flake8,py3
 
 [testenv:py3]
 deps =
+  # the dependency below is needed for now as a workaround for
+  #   https://github.com/pypa/pip/issues/6239
+  swh.core[http] >= 0.0.61
   .[testing]
-  .[server]
   pytest-cov
   pifpaf
   pytest-django
