Start migrate tests to pytest-django
That also fix the pytest tests run

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,16 @@ deps =
 commands =
   pifpaf run postgresql -- pytest --cov {envsitepackagesdir}/swh/deposit --cov-branch {posargs} {envsitepackagesdir}/swh/deposit
 
+
+[testenv:py3-dev]
+deps =
+  .[testing]
+  pytest-cov
+  ipdb
+commands =
+  pytest {envsitepackagesdir}/swh/deposit/ {posargs}
+
+
 [testenv:flake8]
 skip_install = true
 deps =
