--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,3 +8,4 @@ include version.txt
 recursive-include swh/deposit/static *
 recursive-include swh/deposit/fixtures *
 recursive-include swh/deposit/templates *
+recursive-include swh/deposit/tests/*/data *
