tox.ini: Update tox.ini requirements

--- a/tox.ini
+++ b/tox.ini
@@ -5,23 +5,22 @@ envlist=flake8,py3
 deps =
   # the dependency below is needed for now as a workaround for
   #   https://github.com/pypa/pip/issues/6239
-  swh.core[http] >= 0.0.61
+  swh.core[http] >= 0.0.75
   .[testing]
   pytest-cov
   pifpaf
-  pytest-django
 commands =
-  pifpaf run postgresql -- pytest --cov {envsitepackagesdir}/swh/deposit --cov-branch {posargs} {envsitepackagesdir}/swh/deposit
-
+  pifpaf run postgresql -- pytest --cov {envsitepackagesdir}/swh/deposit --cov-branch \
+      {envsitepackagesdir}/swh/deposit \
+      {posargs}
 
 [testenv:py3-dev]
 deps =
+  swh.core[http] >= 0.0.75
   .[testing]
-  pytest-cov
   ipdb
 commands =
   pytest {envsitepackagesdir}/swh/deposit/ {posargs}
-
 
 [testenv:flake8]
 skip_install = true
