tox.ini: pass DJANGO_SETTINGS_MODULE to mypy environment
hat tip to @anlambert for the tip

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ commands =
     --exclude=.tox,.git,__pycache__,.tox,.eggs,*.egg,swh/deposit/migrations
 
 [testenv:mypy]
+setenv = DJANGO_SETTINGS_MODULE = swh.deposit.settings.testing
 skip_install = true
 deps =
   .[testing]
