Migrate tox.ini to extras = xxx instead of deps = .[testing]

--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,12 @@
 envlist=flake8,mypy,py3
 
 [testenv]
+extras =
+  testing
 deps =
   # the dependency below is needed for now as a workaround for
   #   https://github.com/pypa/pip/issues/6239
   swh.core[http] >= 0.0.75
-  .[testing]
   dev: ipdb
   pytest-cov
   pifpaf
@@ -27,9 +28,9 @@ commands =
 
 [testenv:mypy]
 setenv = DJANGO_SETTINGS_MODULE = swh.deposit.settings.testing
-skip_install = true
+extras =
+  testing
 deps =
-  .[testing]
   mypy
 commands =
   mypy swh
