mypy: Fix missing import

--- a/mypy.ini
+++ b/mypy.ini
@@ -32,3 +32,6 @@ ignore_missing_imports = True
 
 [mypy-xmltodict.*]
 ignore_missing_imports = True
+
+[mypy-swh.loader.tar.*]
+ignore_missing_imports = True
