--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,6 @@ setenv = DJANGO_SETTINGS_MODULE = swh.deposit.settings.testing
 extras =
   testing
 deps =
-  mypy
+  mypy < 0.750
 commands =
   mypy swh
