--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -2,6 +2,7 @@ pytest
 pytest-django
 pytest-mock
 swh.scheduler[testing]
+swh.loader.core[testing]
 pytest-postgresql >= 2.1.0
 requests_mock
-django-stubs < 1.3.0
+django-stubs
