--- a/tox.ini
+++ b/tox.ini
@@ -10,10 +10,8 @@ deps =
   swh.core[http] >= 0.0.75
   dev: ipdb
   pytest-cov
-  pifpaf
 commands =
-  pifpaf run postgresql -- \
-    pytest \
+  pytest \
   !dev: --cov {envsitepackagesdir}/swh/deposit --cov-branch \
         {envsitepackagesdir}/swh/deposit \
         {posargs}
@@ -27,10 +25,11 @@ commands =
     --exclude=.tox,.git,__pycache__,.tox,.eggs,*.egg,swh/deposit/migrations
 
 [testenv:mypy]
-setenv = DJANGO_SETTINGS_MODULE = swh.deposit.settings.testing
+setenv = DJANGO_SETTINGS_MODULE=swh.deposit.settings.testing
 extras =
   testing
 deps =
-  mypy < 0.750
+  mypy
+  django-stubs
 commands =
   mypy swh
