Fix debian/control and debian/rules files
- fix file dispatch for the python3-swh.deposit.client binary package
  after swh.deposit.client has been moved from a python package to a module,
- enable tests in d/rules,
- fix dependencies in d/control.

--- a/debian/rules
+++ b/debian/rules
@@ -14,9 +14,7 @@ override_dh_install:
 		mkdir -p $(CURDIR)/debian/python3-swh.deposit.loader/usr/lib/python$$pyvers/dist-packages/swh/deposit/loader ; \
 		mv $(CURDIR)/debian/python3-swh.deposit/usr/lib/python$$pyvers/dist-packages/swh/deposit/loader/* \
 		   $(CURDIR)/debian/python3-swh.deposit.loader/usr/lib/python$$pyvers/dist-packages/swh/deposit/loader/ ; \
-		mkdir -p $(CURDIR)/debian/python3-swh.deposit.client/usr/lib/python$$pyvers/dist-packages/swh/deposit/client ; \
-		mv $(CURDIR)/debian/python3-swh.deposit/usr/lib/python$$pyvers/dist-packages/swh/deposit/client/* \
-		   $(CURDIR)/debian/python3-swh.deposit.client/usr/lib/python$$pyvers/dist-packages/swh/deposit/client/ ; \
+		mkdir -p $(CURDIR)/debian/python3-swh.deposit.client/usr/lib/python$$pyvers/dist-packages/swh/deposit ; \
+		mv $(CURDIR)/debian/python3-swh.deposit/usr/lib/python$$pyvers/dist-packages/swh/deposit/client.py\
+		   $(CURDIR)/debian/python3-swh.deposit.client/usr/lib/python$$pyvers/dist-packages/swh/deposit/ ; \
 	done
-
-override_dh_auto_test:
