--- a/debian/control
+++ b/debian/control
@@ -4,20 +4,21 @@ Section: python
 Priority: optional
 Build-Depends: debhelper (>= 9),
                dh-python (>= 3),
-               patool,
                python3-setuptools,
                python3-all,
                python3-click,
                python3-django,
                python3-djangorestframework,
+			   python3-iso8601,
                python3-pytest,
                python3-pytest-django,
+               python3-pytest-mock,
+               python3-pytest-postgresql,
                python3-requests,
-               python3-vcversioner,
-               python3-swh.core (>= 0.0.36~),
+               python3-requests-mock,
+               python3-swh.core (>= 0.0.75~),
                python3-swh.model (>= 0.0.26~),
-               python3-swh.loader.core (>= 0.0.32~),
-               python3-swh.loader.tar (>= 0.0.39~),
+               python3-swh.loader.core (>= 0.0.71~),
                python3-swh.scheduler (>= 0.0.39~),
                python3-vcversioner,
                python3-xmltodict,
@@ -26,16 +27,15 @@ Homepage: https://forge.softwareheritage.org/source/swh-deposit/
 
 Package: python3-swh.deposit
 Architecture: all
-Depends: python3-swh.core (>= 0.0.36~),
+Depends: python3-swh.core (>= 0.0.75~),
          python3-swh.model (>= 0.0.26~),
          python3-swh.scheduler (>= 0.0.39~),
-         patool,
          ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Server
 
 Package: python3-swh.deposit.client
 Architecture: all
-Depends: python3-swh.core (>= 0.0.36~),
+Depends: python3-swh.core (>= 0.0.75~),
          python3-swh.model (>= 0.0.26~),
          python3-requests,
          python3-xmltodict,
@@ -43,13 +43,11 @@ Depends: python3-swh.core (>= 0.0.36~),
 Description: Software Heritage Deposit Api Client
 
 Package: python3-swh.deposit.loader
-Conflict: python3-swh.deposit.injection
 Architecture: all
 Depends: python3-swh.deposit.client (= ${binary:Version}),
          python3-swh.core (>= 0.0.36~),
          python3-swh.model (>= 0.0.26~),
-         python3-swh.loader.core (>= 0.0.32~),
-         python3-swh.loader.tar (>= 0.0.39~),
+         python3-swh.loader.core (>= 0.0.71~),
          python3-swh.scheduler (>= 0.0.39~),
          ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Loader
