Add tox.ini and pytest.ini in the MANIFEST.in file

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,3 +6,5 @@ recursive-include swh/deposit/fixtures *
 recursive-include swh/deposit/templates *
 recursive-include swh/deposit/tests/*/data *
 recursive-include swh py.typed
+include tox.ini
+include pytest.ini
