--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=flake8,mypy,py3
+envlist=flake8,mypy,py3-django{1,2}
 
 [testenv]
 extras =
@@ -10,6 +10,8 @@ deps =
   swh.core[http] >= 0.0.75
   dev: ipdb
   pytest-cov
+  django1: Django>=1.11,<2
+  django2: Django>=2,<3
 commands =
   pytest \
   !dev: --cov {envsitepackagesdir}/swh/deposit --cov-branch \
