--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,13 @@ commands =
         {envsitepackagesdir}/swh/deposit \
         {posargs}
 
+[testenv:black]
+skip_install = true
+deps =
+  black
+commands =
+  {envpython} -m black --check swh
+
 [testenv:flake8]
 skip_install = true
 deps =
