tox.ini: Use pdbpp
It's a tad more colorful

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
   # the dependency below is needed for now as a workaround for
   #   https://github.com/pypa/pip/issues/6239
   swh.core[http] >= 0.0.75
-  dev: ipdb
+  dev: pdbpp
   pytest-cov
   django2: Django>=2,<3
 commands =
