--- a/mypy.ini
+++ b/mypy.ini
@@ -27,6 +27,9 @@ ignore_missing_imports = True
 [mypy-pytest.*]
 ignore_missing_imports = True
 
+[tenacity.*]
+ignore_missing_imports = True
+
 [mypy-rest_framework.*]
 ignore_missing_imports = True
 
