--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
-addopts = -p no:flask
+# Remove the pytest_swh_* entries when they stop getting imported automatically
+addopts = -p no:flask -p no:pytest_swh_scheduler -p no:pytest_swh_storage
 norecursedirs = docs
 DJANGO_SETTINGS_MODULE = swh.deposit.settings.testing
 
