mypy: Add swh.storage to ignore missing imports

--- a/mypy.ini
+++ b/mypy.ini
@@ -38,3 +38,6 @@ ignore_missing_imports = True
 
 [mypy-swh.loader.tar.*]
 ignore_missing_imports = True
+
+[mypy-swh.storage.*]
+ignore_missing_imports = True
