--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 # Remove the pytest_swh_* entries when they stop getting imported automatically
 addopts = -p no:flask -p no:pytest_swh_scheduler -p no:pytest_swh_storage
-norecursedirs = docs
+norecursedirs = docs .*
 DJANGO_SETTINGS_MODULE = swh.deposit.settings.testing
 
 markers =
