--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include version.txt
 recursive-include swh/deposit/static *
 recursive-include swh/deposit/fixtures *
 recursive-include swh/deposit/templates *
+recursive-include swh/deposit/tests/data *
 recursive-include swh/deposit/tests/*/data *
 recursive-include swh py.typed
 include tox.ini
