fix mypy error in swh/deposit/urls.py
If djangorestframework-stubs does not contain the stub for
`format_suffix_patterns`, then mypy does not see any issue on passing it
a `List[object]` as argument, so the `# type: ignore` is useless,
so mypy complains about it.

--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,6 @@ extras =
 deps =
   mypy
   django-stubs
-  djangorestframework-stubs
+  djangorestframework-stubs >= 1.3.0
 commands =
   mypy swh
