--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Build-Depends: debhelper (>= 9),
                python3-pytest-django,
                python3-pytest-mock,
                python3-pytest-postgresql,
+               python3-swh.core.db.pytestplugin,
                python3-requests,
                python3-requests-mock,
                python3-setuptools,
