--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends: debhelper (>= 9),
                dh-python (>= 3),
                python3-all,
                python3-click,
+               python3-swh.auth.django,
                python3-django,
                python3-djangorestframework,
                python3-django-test-migrations,
