requirements-test: don't install pytest-postgresql 3.0+
3.0 breaks backwards compatibility, we should handle the upgrade in a
separate patch, for now this ensures the rest of the pipelines can keep
running.

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -3,7 +3,7 @@ pytest-django
 pytest-mock
 swh.scheduler[testing]
 swh.loader.core[testing]
-pytest-postgresql >= 2.1.0
+pytest-postgresql >= 2.1.0, < 3.0
 requests_mock
 django-stubs
 djangorestframework-stubs >= 1.4
