Add support for Django 3

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=flake8,mypy,py3-django2
+envlist=flake8,mypy,py3-django2,py3-django3
 
 [testenv]
 extras =
@@ -12,6 +12,7 @@ deps =
   dev: pdbpp
   pytest-cov
   django2: Django>=2,<3
+  django3: Django>=3,<4
 commands =
   pytest \
   !dev: --cov {envsitepackagesdir}/swh/deposit --cov-branch \
