Pin mypy and drop type annotations which makes mypy unhappy
This also drops spurious copyright headers to those files if present.

Related to T3812

--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ setenv = DJANGO_SETTINGS_MODULE=swh.deposit.settings.testing
 extras =
   testing
 deps =
-  mypy
+  mypy==0.920
 commands =
   mypy swh
 
