--- a/mypy.ini
+++ b/mypy.ini
@@ -33,6 +33,9 @@ ignore_missing_imports = True
 [mypy-rest_framework.*]
 ignore_missing_imports = True
 
+[mypy-xmlschema.*]
+ignore_missing_imports = True
+
 [mypy-xmltodict.*]
 ignore_missing_imports = True
 
