--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,7 @@ Build-Depends: debhelper (>= 9),
                python3-swh.core (>= 0.0.75~),
                python3-swh.model (>= 0.3.8~),
                python3-swh.scheduler (>= 0.0.39~),
+               python3-xmlschema,
 Standards-Version: 3.9.6
 Homepage: https://forge.softwareheritage.org/source/swh-deposit/
 
@@ -34,6 +35,7 @@ Depends: python3-swh.core (>= 0.0.75~),
          python3-swh.auth.django,
          python3-django,
          python3-djangorestframework,
+         python3-xmlschema,
          ${misc:Depends}, ${python3:Depends}
 Description: Software Heritage Deposit Server
 
