add strict asyncio_mode in pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,5 @@ DJANGO_SETTINGS_MODULE = swh.deposit.settings.testing
 markers =
     db: execute tests using a postgresql database
     fs: execute tests using the filesystem
+
+asyncio_mode = strict
