--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -5,8 +5,8 @@ swh.scheduler[testing]
 swh.loader.core[testing]
 pytest-postgresql >=3, < 4.0.0  # version 4.0 depends on psycopg 3. https://github.com/ClearcodeHQ/pytest-postgresql/blob/main/CHANGES.rst#400
 requests_mock
-django-stubs
-djangorestframework-stubs >= 1.4
+django-stubs >=1.10.0,<1.12.0   # only versions to support mypy 0.942
+djangorestframework-stubs >= 1.4,<1.7.0  # v1.7.0 removes support for mypy 0.942
 django-test-migrations
 
 types-requests
