--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,7 @@ Build-Depends: debhelper (>= 9),
                python3-swh.core (>= 0.0.75~),
                python3-swh.model (>= 0.3.8~),
                python3-swh.scheduler (>= 0.0.39~),
+               python3-swh.loader.core,
                python3-xmlschema,
 Standards-Version: 3.9.6
 Homepage: https://forge.softwareheritage.org/source/swh-deposit/
