--- a/debian/control
+++ b/debian/control
@@ -7,12 +7,12 @@ Build-Depends: debhelper (>= 9),
                python3-all,
                python3-click,
                python3-swh.auth.django,
-               python3-django,
+               python3-django (>= 2:2.2.11~),
                python3-djangorestframework,
                python3-django-test-migrations,
                python3-iso8601,
                python3-pytest,
-               python3-pytest-django,
+               python3-pytest-django (>= 3.5.1~),
                python3-pytest-mock,
                python3-pytest-postgresql,
                python3-swh.core.db.pytestplugin,
