--- a/mypy.ini
+++ b/mypy.ini
@@ -44,3 +44,9 @@ ignore_missing_imports = True
 
 [mypy-swh.storage.*]
 ignore_missing_imports = True
+
+[mypy-storages.*]
+ignore_missing_imports = True
+
+[mypy-azure.*]
+ignore_missing_imports = True
