Migrate to copier-based swh-py-template

--- a/mypy.ini
+++ b/mypy.ini
@@ -9,6 +9,9 @@ plugins = mypy_django_plugin.main
 [mypy.plugins.django-stubs]
 django_settings_module = swh.deposit.settings.testing
 
+explicit_package_bases = True
+# ^ Needed for mypy to detect py.typed from swh packages installed
+# in editable mode
 
 # 3rd party libraries without stubs (yet)
 
@@ -22,9 +25,6 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-psycopg2.*]
-ignore_missing_imports = True
-
-[mypy-pytest.*]
 ignore_missing_imports = True
 
 [tenacity.*]
