--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,12 @@
-*.pyc
-*.sw?
-*~
-/.coverage
-/.coverage.*
-.eggs/
-__pycache__
 *.egg-info/
-version.txt
+*.pyc
+.coverage
+.eggs/
+.hypothesis
+.mypy_cache
+.tox
+__pycache__
 build/
 dist/
-/analysis.org
-/swh/deposit/fixtures/private_data.yaml
-/swh/deposit.json
-/test.json
-/swh/test
-db.sqlite3
-/.noseids
-*.tgz
-*.zip
-*.tar.gz
-*.tar.bz2
-*.tar.lzma
-.tox/
-.mypy_cache/
-.hypothesis/
+docs/README.rst
+docs/README.md
