Replace all relative import statements by absolute ones
The former does not always plays well with PEP420...

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ commands =
          --rootdir {envsitepackagesdir} \
          --cov={envsitepackagesdir}/swh/deposit \
          --cov-branch \
+         --ignore {envsitepackagesdir}/swh/deposit/settings/ \
          {envsitepackagesdir}/swh/deposit \
          {posargs}
 # --rootdir and --import-mode are required to make tests that depends
