--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,8 @@
 [pytest]
 # Remove the pytest_swh_* entries when they stop getting imported automatically
-addopts = -p no:flask -p no:pytest_swh_scheduler -p no:pytest_swh_storage -p no:pytest_swh_core
+addopts = --ignore=swh/deposit/settings -p no:flask -p no:pytest_swh_scheduler -p no:pytest_swh_storage -p no:pytest_swh_core
 norecursedirs = build docs .*
 DJANGO_SETTINGS_MODULE = swh.deposit.settings.testing
-
 markers =
     db: execute tests using a postgresql database
     fs: execute tests using the filesystem
