Apply copier template v0.2.0

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
   py3-django3
 
 [testenv]
+usedevelop = true
 extras =
   testing
 deps =
@@ -17,15 +18,10 @@ deps =
   django3: Django>=3,<4
 commands =
   pytest --doctest-modules \
-         --rootdir {envsitepackagesdir} \
-         --cov={envsitepackagesdir}/swh/deposit \
+         --cov=swh/deposit \
          --cov-branch \
-         --ignore {envsitepackagesdir}/swh/deposit/settings/ \
-         {envsitepackagesdir}/swh/deposit \
+         swh/deposit \
          {posargs}
-# --rootdir (with --import-mode from pytest.ini) are required to make tests
-# that depends on the test file to be a proper submodule of the swh namespace
-# after migration to PEP420 (implicit namespace).
 
 [testenv:black]
 skip_install = true
