--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 # Remove the pytest_swh_* entries when they stop getting imported automatically
-addopts = --import-mode=importlib --ignore=swh/deposit/settings -p no:flask -p no:pytest_swh_scheduler -p no:pytest_swh_storage -p no:pytest_swh_core
+addopts = --ignore=swh/deposit/settings -p no:flask -p no:pytest_swh_scheduler -p no:pytest_swh_storage -p no:pytest_swh_core
 norecursedirs = build docs .*
 asyncio_mode = strict
 
@@ -9,3 +9,4 @@ markers =
     db: execute tests using a postgresql database
     fs: execute tests using the filesystem
 
+consider_namespace_packages = true
