--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,3 +64,53 @@ ensure_newline_before_comments = true
 line_length = 88
 force_sort_within_sections = true
 known_first_party = ['swh']
+
+[tool.django-stubs]
+django_settings_module = "swh.deposit.settings.development"
+
+[tool.mypy]
+namespace_packages = true
+warn_unused_ignores = true
+explicit_package_bases = true
+# ^ Needed for mypy to detect py.typed from swh packages installed
+# in editable mode
+
+plugins = [
+    "mypy_django_plugin.main",
+]
+
+# 3rd party libraries without stubs (yet)
+[[tool.mypy.overrides]]
+module = [
+    "celery.*",
+    "storages.backends.azure_storage.*"
+]
+ignore_missing_imports = true
+
+[tool.flake8]
+select = ["C", "E", "F", "W", "B950"]
+ignore = [
+    "E203", # whitespaces before ':' <https://github.com/psf/black/issues/315>
+    "E231", # missing whitespace after ','
+    "E501", # line too long, use B950 warning from flake8-bugbear instead
+    "W503" # line break before binary operator <https://github.com/psf/black/issues/52>
+]
+max-line-length = 88
+
+[tool.pytest.ini_options]
+addopts = """
+    -p no:flask
+    -p no:pytest_swh_scheduler
+    -p no:pytest_swh_storage
+    -p no:pytest_swh_core
+    --ignore=swh/deposit/settings
+    --strict-markers
+"""
+norecursedirs = "build docs .*"
+asyncio_mode = "strict"
+consider_namespace_packages = true
+DJANGO_SETTINGS_MODULE = "swh.deposit.settings.testing"
+markers = """
+    db: execute tests using a postgresql database
+    fs: execute tests using the filesystem
+"""
