loader: Deposit checker must be able to run outside a django context

--- a/tox.ini
+++ b/tox.ini
@@ -62,3 +62,13 @@ setenv =
   SPHINXOPTS = -W
 commands =
   make -I {env_dir}/share/swh-docs -C docs
+
+# DepositChecker must be able to run outside a django context
+[testenv:deposit_checker_import]
+skip_install = true
+deps =
+  setuptools
+  -r requirements.txt
+  -r requirements-swh.txt
+commands =
+  python3 -c "from swh.deposit.loader.checker import DepositChecker"
