tox: Ensure PublicApiDepositClient can be imported without django
This class is used in the deposit CLI and should be usable without
the server part of swh-deposit installed.

--- a/tox.ini
+++ b/tox.ini
@@ -72,3 +72,4 @@ deps =
   -r requirements-swh.txt
 commands =
   python3 -c "from swh.deposit.loader.checker import DepositChecker"
+  python3 -c "from swh.deposit.client import PublicApiDepositClient"
