Use swh-scheduler[pytest] instead of swh-scheduler[testing]

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,7 +1,7 @@
 pytest
 pytest-django
 pytest-mock
-swh.scheduler[testing] >= 3.0.0
+swh.scheduler[pytest] >= 3.1.0
 swh.loader.core[testing] >= 4.0.0
 pytest-postgresql >= 5
 requests_mock
