--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ ignore = [
     "W503" # line break before binary operator <https://github.com/psf/black/issues/52>
 ]
 max-line-length = 88
+exclude = ["build/", ".tox/"]
 
 [tool.pytest.ini_options]
 addopts = """
@@ -106,6 +107,5 @@ addopts = """
     --strict-markers
 """
 norecursedirs = "build docs .*"
-asyncio_mode = "strict"
 consider_namespace_packages = true
 DJANGO_SETTINGS_MODULE = "swh.deposit.settings.testing"
